# canastra-thesis

./: .gitignore  HANDOFF.md  README.md  pyproject.toml
docs/specs/: 00-decisions.md  01-game-state.md  02-action-space.md  03-observation-space.md  04-rules-config-schema.md  05-variant-diffs.md  06-canasta-mechanics.md  test-scenarios-rl.md  test-scenarios-rules.md
examples/: play_cli.py  play_gui.py  run_random_games.py  selfplay_skeleton.py
src/buraco/: __init__.py  cards.py  config.py  describe.py
src/buraco/agents/: heuristic_agent.py  random_agent.py
src/buraco/engine/: actions.py  legal.py  melds.py  scoring.py  serialize.py  state.py  turns.py
src/buraco/env/: encoding.py  env.py  observations.py
src/buraco/profiles/: __init__.py  biriba.py  buraco.py  canasta.py  rummy.py
src/buraco/rl/: __init__.py  agent.py  buffer.py  checkpoint.py  config.py  evaluate.py  metrics.py  nets.py  obs.py  parallel.py  pool.py  ppo.py  rollout.py  train.py
src/buraco/webui/: __init__.py  __main__.py  (+4 more)
tests/: helpers.py  test_actions.py  test_canasta.py  test_cards.py  test_config.py  test_deal.py  test_env.py  test_melds.py  test_pending_pile.py  test_properties.py  test_rl_agent.py  test_rl_checkpoint.py  test_rl_dist.py  test_rl_gae.py  test_rl_net.py  test_rl_obs.py  test_rl_parallel.py  test_rl_pool.py  test_rl_rollout.py  test_rl_smoke_train.py  test_rl_structured.py  test_scaffold.py  test_scenarios_backfill.py  test_scoring.py  test_soak.py  test_table_parity.py  test_teams.py  test_turns.py  test_variants.py  test_webui_http.py  test_webui_session.py
(+6 files in other folders)
