[project]
name = "buraco"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Luiz Felipe Barbosa", email = "lfpmb1@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.5.1",
]

[project.scripts]
buraco-gui = "buraco.webui.__main__:main"
buraco-train = "buraco.rl.train:main"
buraco-eval = "buraco.rl.evaluate:main"

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.156.1",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
rl = [
    "torch>=2.8",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
